Update: Refined table padding and adjusted color contrast in About Me page.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buse Sıla Dolu - Ana Sayfa</title>
-    <link rel="stylesheet" href="style.css"> 
+    <title>Buse Sıla Dolu - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-bg">
     <header>
-        <h1>Buse Sıla Dolu - Web-GIS Portföyü</h1>
-        <nav>
+        <h1>Buse Sıla Dolu's Web-GIS Portfolio</h1>
+        <nav class="nav-animated"> 
             <ul>
-                <li><a href="index.html" class="active">Ana Sayfa</a></li>
-                <li><a href="about.html">Hakkımda Bilgi</a></li>
-                <li><a href="projects.html">Projeler & OpenLayers</a></li>
-                <li><a href="hobbies.html">Hobilerim</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="education_projects.html">Education & Projects</a></li>
+                <li><a href="map.html">Visited Places Map</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="giris">
-            <h2 class="animated-heading">Hoş Geldiniz!</h2>
-            <p>Bu site, İnternet Tabanlı CBS dersi kapsamında HTML, CSS ve OpenLayers kullanarak hazırladığım kişisel web sayfamdır. Lütfen menüyü kullanarak hakkımdaki bilgilere, projelerime ve ilgi alanlarıma göz atın.</p>
+        <section class="welcome-section">
+            <h2 class="animated-heading">Welcome to my Geospatial Web Journey.</h2>
+            <p class="fade-in-text">This website was created as an assignment for the Web-based GIS course, showcasing skills in HTML, CSS, and OpenLayers. Use the navigation bar to explore my background, projects, and a map of places I have visited.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025. Tüm Hakları Saklıdır.</p>
+        <p>&copy; 2025. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
